# miden-code

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  execution_plan.md  prd.md  progress.md
src/: cli.rs  main.rs
src/chat/: context.rs  mod.rs  ui.rs
src/llm/: client.rs  mod.rs  prompt.rs
src/tools/: filesystem.rs  mod.rs  shell.rs
