[package]
name = "miden-code"
version = "0.1.0"
edition = "2021"
description = "AI Coding Assistant CLI using Sonnet 3.7"
authors = ["Miden Team"]

[dependencies]
# Core
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# Terminal UI
crossterm = "0.27"
ratatui = "0.24"

# Other
dirs = "5.0"
syntect = "5.1"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
